tests/rosetta/out/Swift/call-a-function-11.swift
// Generated by Mochi compiler v0.10.26 on 2025-07-16T09:55:46Z
func zeroval(_ ival: Int) -> Int {
    var x = ival
    x = 0
    return x
}
func zeroptr(_ ref: [Int]) {
    ref[0] = 0
}
func main() {
    var i = 1
    print("initial: " + String(i))
    let tmp = zeroval(i)
    print("zeroval: " + String(i))
    var box = [i]
    zeroptr(box)
    i = box[0]
    print("zeroptr: " + String(i))
    print("pointer: 0")
}
main()
